// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should create new secret 1`] = `
Array [
  Array [
    "[1mGenerating new deployment secret for:[22m",
    "http://localhost:8080",
  ],
  Array [
    "[1mNew secret generated:[22m",
  ],
  Array [
    "",
  ],
  Array [
    "Name: test",
  ],
  Array [
    "Value: 12345",
  ],
  Array [
    "",
  ],
  Array [
    "[33mWARNING![39m",
    "Make sure to write it down, you will not be able to get it's value again!",
  ],
]
`;

exports[`Should deauth on 401 on creation 1`] = `
Array [
  Array [
    "[1mGenerating new deployment secret for:[22m",
    "http://localhost:8080",
  ],
  Array [
    "[31mError: authorization expired![39m",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should deauth on 401 on list 1`] = `
Array [
  Array [
    "[1mListing deployment secrets for:[22m",
    "http://localhost:8080",
  ],
  Array [
    "[31mError: authorization expired![39m",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should list secrets 1`] = `
Array [
  Array [
    "[1mListing deployment secrets for:[22m",
    "http://localhost:8080",
  ],
  Array [
    "[1mGot saved secrets:[22m",
  ],
  Array [
    "",
  ],
  Array [
    "  > [32m@test[39m [90m[][39m",
  ],
]
`;

exports[`Should list zero secrets 1`] = `
Array [
  Array [
    "[1mListing deployment secrets for:[22m",
    "http://localhost:8080",
  ],
  Array [
    "[1mGot saved secrets:[22m",
  ],
  Array [
    "",
  ],
  Array [
    "  > No deployment secrets available!",
  ],
]
`;

exports[`Should remove secret 1`] = `
Array [
  Array [
    "[1mRemoving deployment secret for:[22m",
    "http://localhost:8080",
  ],
  Array [
    "[32mDeployment secret successfully removed![39m",
  ],
]
`;
